Removed some styling to allow the page to display better on mobile devices

--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
     font-family: helvetica,sans;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 1em;
 }
 
 .aside {
