--- a/style.css
+++ b/style.css
@@ -4,16 +4,17 @@ body {
     font-family: sans-serif;
     margin-left: auto;
     margin-right: auto;
+    max-width: 55em;
 }
 
-@media (min-width: 55em) {
-    body {
-        width: 55em;
-    }
-}
 
 .blog_post {
-	border-top: 1px solid grey;
+	border-bottom: 1px solid grey;
+}
+
+article header h1 {
+	font-size: 2em;
+	margin-bottom: 3px;
 }
 
 a.permalink {
@@ -30,4 +31,6 @@ nav ul {
 nav ul li {
 	display: inline;
 	margin-right: 0.3em;
-}
+} 
+
+
