--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Blog</title>
-    <link rel="stylesheet" type="text/css" href="/assets/style.css">
-    
+  {% include "head.liquid" %}
   </head>
   <style type="text/css">
   main {
@@ -27,13 +23,12 @@
 
   <main>
     <ul class="post-list" itemscope itemtype="http://schema.org/ItemList">
-    
+    {% for post in collections.posts.pages %}
       <li itemprop="itemListElement" itemscope itemtype="https://schema.org/BlogPosting">
-        <a href="posts/2020-06-14-lindy-effect-in-software.html">Longevity in software engineering</a>
-        <div class="post-excerpt"><p>How long should we expect themes and technologies in software engineering to last?</p>
-</p>
+        <a href="{{post.permalink}}">{{post.title}}</a>
+        <div class="post-excerpt">{{post.excerpt}}</p>
       </li>
-    
+    {% endfor %}
     </ul>
   </main>
 
