add goatcounter tracking so I can have an idea of who's using the site

--- a/src/_layouts/post.liquid
+++ b/src/_layouts/post.liquid
@@ -20,5 +20,8 @@
         {{ page.content }}
         </main>
     </article>
+
+    <script data-goatcounter="https://jelford.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
     </body>
 </html>
