--- a/src/_layouts/default.liquid
+++ b/src/_layouts/default.liquid
@@ -7,5 +7,8 @@
     <div>
       {{ page.content }}
     </div>
+
+    <script data-goatcounter="https://jelford.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
