--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -32,5 +32,7 @@
     </ul>
   </main>
 
+  <script data-goatcounter="https://jelford.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
