--- a/src/_layouts/default.liquid
+++ b/src/_layouts/default.liquid
@@ -8,7 +8,8 @@
       {{ page.content }}
     </div>
 
+
     <script data-goatcounter="https://jelford.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+        async src="/assets/goatcounter.js"></script>
   </body>
 </html>
