--- a/src/_layouts/post.liquid
+++ b/src/_layouts/post.liquid
@@ -22,6 +22,6 @@
     </article>
 
     <script data-goatcounter="https://jelford.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+        async src="/assets/goatcounter.js"></script>
     </body>
 </html>
