--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -33,6 +33,6 @@
   </main>
 
   <script data-goatcounter="https://jelford.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+        async src="/assets/goatcounter.js"></script>
 </body>
 </html>
