vendorize the goatcounter script - correct paths

--- a/src/_layouts/default.liquid
+++ b/src/_layouts/default.liquid
@@ -9,7 +9,6 @@
     </div>
 
 
-    <script data-goatcounter="https://jelford.goatcounter.com/count"
-        async src="/assets/goatcounter.js"></script>
+    {% include "goatcounter_scriptlet.liquid" %}
   </body>
 </html>
