--- a/src/_layouts/post.liquid
+++ b/src/_layouts/post.liquid
@@ -21,7 +21,6 @@
         </main>
     </article>
 
-    <script data-goatcounter="https://jelford.goatcounter.com/count"
-        async src="/assets/goatcounter.js"></script>
+    {% include "goatcounter_scriptlet.liquid" %}
     </body>
 </html>
