--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -32,7 +32,6 @@
     </ul>
   </main>
 
-  <script data-goatcounter="https://jelford.goatcounter.com/count"
-        async src="/assets/goatcounter.js"></script>
+  {% include "goatcounter_scriptlet.liquid" %}
 </body>
 </html>
