--- a/src/_includes/goatcounter_scriptlet.liquid
+++ b/src/_includes/goatcounter_scriptlet.liquid
@@ -1,3 +1,8 @@
-
+    <!-- 
+        Hey there friend! Don't mind me, I'm just trying to get some idea of whether anyone reads this stuff. 
+        Goatcounter (here: https://www.goatcounter.com/) tries to give that, and claims to do so without
+        tracking. I hope that's acceptable to you.
+    -->
+    <noscript><img src="https://jelford.goatcounter.com/count?p=/test-img"></noscript>
     <script data-goatcounter="https://jelford.goatcounter.com/count"
         async src="/assets/vendor/goatcounter.js"></script>
