--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,10 +2,11 @@
 
 body {
     font-family: sans-serif;
-    margin-left: auto;
-    margin-right: auto;
-	max-width: 100%;
-	width: 55em;
+    margin: 1rem auto;
+    padding: 1rem;
+	max-width: 55rem;
+    line-height: 1.5rem;
+    font-size: 1.1rem;
 }
 
 img {
@@ -28,4 +29,22 @@ img {
 
 .breadcrumbs a:visited {
     color: grey;
+}
+
+pre {
+    padding: 0.7em;
+    overflow-x: scroll;
+}
+
+blockquote {
+    background-color: #EEEEEE;
+    padding: 0.5rem 2rem;
+    margin: 0;
+    font-style: italic;
+}
+
+.draft-notice {
+    background-color: #e0e0e0;
+    padding: 1em;
+    border-radius: 15px;
 }
