--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <link rel="stylesheet" type="text/css" href="/assets/style.css">
+    
+    </head>
+    <body>
+    <div>
+	    {% block content %} {% endblock %}
+    </div>
+
     <!-- 
         Hey there friend! Don't mind me, I'm just trying to get some idea of whether anyone reads this stuff. 
         Goatcounter (here: https://www.goatcounter.com/) tries to give that, and claims to do so without
@@ -6,3 +19,5 @@
     <noscript><img src="https://jelford.goatcounter.com/count?p=/test-img"></noscript>
     <script data-goatcounter="https://jelford.goatcounter.com/count"
         async src="/assets/vendor/goatcounter.js"></script>
+  </body>
+</html>
