--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block head %}
+<title>jelford's blog</title>
+{% endblock %}
 {% block content %}  
 
 <style type="text/css">
@@ -16,7 +19,7 @@ div p {
 
 
 <header>
-    <h1 class="breadcrumbs"><a href="/index.html">~jelford</a> / blog:</h1>
+    <h1 class="breadcrumbs"><a href="/">~jelford</a> / blog:</h1>
     <a href="/rss.xml">feed</a>
   </header>
 
