--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block head %}
+<title>jelford</title>
+{% endblock %}
 {% block content %}
 <div>
     <h1 class="breadcrumbs">~jelford</h1>
@@ -39,14 +41,14 @@
         <li><a href="https://github.com/jelford/activesoup">activesoup</a>
             A headless pure-python web scraping tool that mixes the convenience of <code>requests</code>
             with the querying power of <code>beautifulsoup</code>.</li>
+        <li><a href="https://github.com/jelford/keyn">keyn</a>
+            A browser extension for browsing the web with the power of your keyboard</li>
+        <li><a href="https://github.com/jelford/keyn">fixl</a>
+            Another browser extension, to help with looking up FIX specs.</li>
         <li><a href="https://github.com/jelford/rumour">rumour</a>
             A re-implementation of the <code>serf</code>'s <a
                 href="https://www.serf.io/docs/internals/gossip.html">gossip</a>
             protocol, written in async rust</li>
-        <li><a href="https://github.com/jelford/keyn">keyn</a>
-            A firefox extension for browsing the web with the power of your keyboard</li>
-        <li><a href="https://github.com/jelford/keyn">fixl</a>
-            Another browser extension, to help with looking up FIX specs. Don't know what FIX is? Lucky you!</li>
         <li><a href="https://github.com/jelford/squirrel">squirrel</a>
             Automatic backups and queryable history while you work</li>
         <li><a href="https://github.com/jelford/ferret">ferret</a>
